	* Fix and improve row-height dialog.
	* Fix hide/show detail and group/ungroup dialog.
	* Include more info in HTML 4.0 files.
	* Support borders in HTML4.0 exports.
	* Fix Sheet-Object-Scrollbar configuration dialog.
	* Fix Sheet Object leak.
	* Fix Sheet-Object-Checkbox configuration dialog.
	* Fix Sheet-Object Arrow/Line configuration dialog.
	* Fix Sheet-Object Fill configuration dialog.

Jody:
	* Add password dialog to support encrypted input.
	* Make expr parser utf8 clean.
	* Fix printing.
	* Fix object import from XL.
	* Quicky insert image item.

Jukka:
	* More solver improvements.

Morten:
	* More and better chunk allocation.
	* Fixed memory corruption in LINEST and LOGEST.
	* Plug gigantic leak in parser.
	* Improve gnumeric-expr-entry's utf8 support and speed.

--------------------------------------------------------------------------
Gnumeric 1.1.2

Almer:
	* Make autoformat edges toggleable.

Andreas:
	* Make Single-Factor ANOVA undoable.
	* Port search dialog.
	* Add merge tool.
	* Implement setting and changing of tab colors.
	* Port search/replace dialog.
	* Reimplementation of function selector.
	* Reimplementation of formula guru.
	* Add `recently used' to function selector.
	* Fix csv importer crash.
	* Port summary dialog and make it modeless.
	* Make summary changes undoable.
	* Fixed #68048.

Jody:
	* Fix XL import of external function names.
	* plug item-bar leak.
	* Rewrite editable-label to use gtkentry and to be utf8 clean.
	* Fix scrollbar & checkbox object cloning.
	* Support Applix's #AND# #OR# #NOT#
	* Rework dependent relocation.
	* Improve event handling during sheet-object editing.
	* Add dependency support for 3d references.  needs work on delete.
	* More polish to dependency engine.
	* Big ExprTree -> GnmExpr rename in prep for libgnumeric.
	* Support importing encrypted XLS workbooks (password is temporarilly
	  hard coded)

Jukka:
	* More solver improvements.

Morten:
	* Plug leaks.