@@ -2,17 +2,86 @@
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd" >
 
 <glade-interface>
-  <requires lib="gnome" />
-
-  <widget class="GnomePropertyBox" id="WorkbookAttr">
+  <widget class="GtkDialog" id="WorkbookAttr">
     <property name="visible">no</property>
     <property name="modal">no</property>
     <property name="allow_shrink">no</property>
     <property name="allow_grow">no</property>
     <property name="window-position">GTK_WIN_POS_NONE</property>
 
-    <child internal-child="notebook">
-      <widget class="GtkNotebook" id="notebook1">
+    <child internal-child="vbox">
+      <widget class="GtkVBox" id="dialog-vbox1">
+        <property name="homogeneous">no</property>
+        <property name="spacing">0</property>
+        <property name="visible">yes</property>
+
+        <child internal-child="action_area">
+          <widget class="GtkHButtonBox" id="dialog-action_area1">
+            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="border_width">10</property>
+            <property name="homogeneous">yes</property>
+            <property name="spacing">5</property>
+            <property name="visible">yes</property>
+
+                <child>
+                  <widget class="GtkButton" id="close_button">
+                    <property name="can_default">yes</property>
+                    <property name="can_focus">yes</property>
+                    <property name="relief">GTK_RELIEF_NORMAL</property>
+                    <property name="visible">yes</property>
+                    <property name="label">gtk-close</property>
+                    <property name="use_stock">yes</property>
+                    <property name="use_underline">yes</property>
+                  </widget>
+                </child>
+
+                <child>
+                  <widget class="GtkButton" id="apply_button">
+                    <property name="can_default">yes</property>
+                    <property name="can_focus">yes</property>
+                    <property name="relief">GTK_RELIEF_NORMAL</property>
+                    <property name="visible">yes</property>
+                    <property name="label">gtk-apply</property>
+                    <property name="use_stock">yes</property>
+                    <property name="use_underline">yes</property>
+                  </widget>
+                </child>
+
+                <child>
+                  <widget class="GtkButton" id="ok_button">
+                    <property name="can_default">yes</property>
+                    <property name="has_default">yes</property>
+                    <property name="can_focus">yes</property>
+                    <property name="relief">GTK_RELIEF_NORMAL</property>
+                    <property name="visible">yes</property>
+                    <property name="label">gtk-ok</property>
+                    <property name="use_stock">yes</property>
+                    <property name="use_underline">yes</property>
+                  </widget>
+                </child>
+
+                <child>
+                  <widget class="GtkButton" id="help_button">
+                    <property name="can_default">yes</property>
+                    <property name="can_focus">yes</property>
+                    <property name="relief">GTK_RELIEF_NORMAL</property>
+                    <property name="visible">yes</property>
+                    <property name="label">gtk-help</property>
+                    <property name="use_stock">yes</property>
+                    <property name="use_underline">yes</property>
+                  </widget>
+                </child>
+          </widget>
+          <packing>
+            <property name="padding">0</property>
+            <property name="expand">no</property>
+            <property name="fill">yes</property>
+            <property name="pack_type">GTK_PACK_END</property>
+          </packing>
+        </child>
+
+    <child>
+      <widget class="GtkNotebook" id="notebook">
         <property name="can_focus">yes</property>
         <property name="show_tabs">yes</property>
         <property name="show_border">yes</property>
@@ -190,6 +259,8 @@
         <property name="expand">yes</property>
         <property name="fill">yes</property>
       </packing>
+    </child>
+  </widget>
     </child>
   </widget>
 </glade-interface>
