@@ -19,6 +19,7 @@ Andreas:
 	* Fix Sheet-Object-Checkbox configuration dialog.
 	* Fix Sheet-Object Arrow/Line configuration dialog.
 	* Fix Sheet-Object Fill configuration dialog.
+	* Fix workbook attribute dialog.
 
 Jody:
 	* Add password dialog to support encrypted input.
